@@ -16,6 +16,7 @@ Bug Fixes::
 * place block image in SVG format in correct column when align is left and page columns are enabled (#2241)
 * accurately trap LoadError from CodeRay if source language is not recognized on code block
 * only draw rounded rectangle around phrase if `border-radius` is > 0
+* use `base-border-color` value if border width is set on role for inline phrase but not border color
 
 == 2.1.0 (2022-06-11) - @mojavelinux
 
